bugfix: dialog footer overlaps with form scrollbar

--- a/src/components/formdialog.scss
+++ b/src/components/formdialog.scss
@@ -40,7 +40,7 @@
 }
 
 .dialogContentInner {
-    padding: 0.5em 1em 20em 1em;
+    padding: 0.5em 1em 5em 1em;
 }
 
 .dialogContentInner-mini {
